{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 257,
  "lineage": "0ca6daf4-54ba-dc9f-efaa-314168934e03",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "manager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0905a1bd36fefbc75",
            "arn": "arn:aws:ec2:eu-west-1:618825041281:instance/i-055da97807241d9cb",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0d03c814c0c39214c",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-055da97807241d9cb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "tpe",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b69e9f669b0d85b3",
            "private_dns": "ip-125-0-7-57.eu-west-1.compute.internal",
            "private_ip": "125.0.7.57",
            "public_dns": "ec2-54-195-172-218.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.195.172.218",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0d03c814c0c39214c",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e2321a60623f1c9",
            "tags": {
              "Name": "mirantis-manager-0",
              "app_env": "dev",
              "app_name": "mirantis",
              "owner": "Thomas Perelle"
            },
            "tags_all": {
              "Name": "mirantis-manager-0",
              "app_env": "dev",
              "app_name": "mirantis",
              "owner": "Thomas Perelle"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02305311f0ac43e3f"
            ]
          },
          "dependencies": [
            "aws_security_group.allow",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.list",
            "data.external.whatismyip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "msr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0905a1bd36fefbc75",
            "arn": "arn:aws:ec2:eu-west-1:618825041281:instance/i-064143def53e03289",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-04c3ac28ef6ad6f36",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-064143def53e03289",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "tpe",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cbc44fee00b103b7",
            "private_dns": "ip-125-0-4-30.eu-west-1.compute.internal",
            "private_ip": "125.0.4.30",
            "public_dns": "ec2-34-246-187-10.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.246.187.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-04c3ac28ef6ad6f36",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e2321a60623f1c9",
            "tags": {
              "Name": "mirantis-msr-0",
              "app_env": "dev",
              "app_name": "mirantis",
              "owner": "Thomas Perelle"
            },
            "tags_all": {
              "Name": "mirantis-msr-0",
              "app_env": "dev",
              "app_name": "mirantis",
              "owner": "Thomas Perelle"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02305311f0ac43e3f"
            ]
          },
          "dependencies": [
            "aws_security_group.allow",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.list",
            "data.external.whatismyip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0905a1bd36fefbc75",
            "arn": "arn:aws:ec2:eu-west-1:618825041281:instance/i-08235d54bb2ed46a1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-02fd26772ea5e3ab3",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08235d54bb2ed46a1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "tpe",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f5c13b5b24a5ec22",
            "private_dns": "ip-125-0-4-95.eu-west-1.compute.internal",
            "private_ip": "125.0.4.95",
            "public_dns": "ec2-34-251-154-240.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.251.154.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-02fd26772ea5e3ab3",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e2321a60623f1c9",
            "tags": {
              "Name": "mirantis-worker-0",
              "app_env": "dev",
              "app_name": "mirantis",
              "owner": "Thomas Perelle"
            },
            "tags_all": {
              "Name": "mirantis-worker-0",
              "app_env": "dev",
              "app_name": "mirantis",
              "owner": "Thomas Perelle"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02305311f0ac43e3f"
            ]
          },
          "dependencies": [
            "aws_security_group.allow",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.list",
            "data.external.whatismyip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:618825041281:internet-gateway/igw-01177cc706c057e86",
            "id": "igw-01177cc706c057e86",
            "owner_id": "618825041281",
            "tags": {
              "Name": "mirantis-gw",
              "app_env": "dev",
              "app_name": "mirantis",
              "owner": "Thomas Perelle"
            },
            "tags_all": {
              "Name": "mirantis-gw",
              "app_env": "dev",
              "app_name": "mirantis",
              "owner": "Thomas Perelle"
            },
            "vpc_id": "vpc-07d24d229b628ad74"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:618825041281:route-table/rtb-0446bb7f098a8e74d",
            "id": "rtb-0446bb7f098a8e74d",
            "owner_id": "618825041281",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01177cc706c057e86",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mirantis-public-rt",
              "app_env": "dev",
              "app_name": "mirantis",
              "owner": "Thomas Perelle"
            },
            "tags_all": {
              "Name": "mirantis-public-rt",
              "app_env": "dev",
              "app_name": "mirantis",
              "owner": "Thomas Perelle"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d24d229b628ad74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3c5058274609211",
            "route_table_id": "rtb-0446bb7f098a8e74d",
            "subnet_id": "subnet-04e2321a60623f1c9"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-rt",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.list"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:618825041281:security-group/sg-02305311f0ac43e3f",
            "description": "Allow what we need",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02305311f0ac43e3f",
            "ingress": [
              {
                "cidr_blocks": [
                  "78.202.194.64/32",
                  "125.0.4.0/22"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow",
            "name_prefix": "",
            "owner_id": "618825041281",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mirantis-allow"
            },
            "tags_all": {
              "Name": "mirantis-allow"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d24d229b628ad74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this",
            "data.external.whatismyip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:618825041281:subnet/subnet-04e2321a60623f1c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "125.0.4.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e2321a60623f1c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "618825041281",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mirantis-public",
              "app_env": "dev",
              "app_name": "mirantis",
              "owner": "Thomas Perelle"
            },
            "tags_all": {
              "Name": "mirantis-public",
              "app_env": "dev",
              "app_name": "mirantis",
              "owner": "Thomas Perelle"
            },
            "vpc_id": "vpc-07d24d229b628ad74"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.list"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:618825041281:vpc/vpc-07d24d229b628ad74",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "125.0.0.0/20",
            "default_network_acl_id": "acl-05c06a2e6ccf48804",
            "default_route_table_id": "rtb-06c2b68c72625a39e",
            "default_security_group_id": "sg-097a60632bcd4f312",
            "dhcp_options_id": "dopt-0cc7626b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07d24d229b628ad74",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06c2b68c72625a39e",
            "owner_id": "618825041281",
            "tags": {
              "Name": "mirantis-vpc",
              "app_env": "dev",
              "app_name": "mirantis",
              "owner": "Thomas Perelle"
            },
            "tags_all": {
              "Name": "mirantis-vpc",
              "app_env": "dev",
              "app_name": "mirantis",
              "owner": "Thomas Perelle"
            }
          }
        }
      ]
    }
  ]
}